--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -4,3 +4,4 @@ $color-primary-dark: #002947;
 $color-white: #fff;
 $color-transparent-black: rgba(0, 0, 0, 0.25);
 $color-transparent-leftAside: rgba(255, 255, 255, 0.23);
+$color-font-dark: rgba(0, 0, 0, 0.78);
