--- a/src/scss/components/_leftAside.scss
+++ b/src/scss/components/_leftAside.scss
@@ -15,28 +15,23 @@
         top: 170px;
 
         img {
-
             position: absolute;
             width: 192.96px;
             height: 213.28px;
             left: 65px;
             top: 79px;
         }
-
-
     }
-
 
     &__form {
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         position: absolute;
         width: 224px;
         height: 108px;
         left: 50px;
         top: 479px;
-
-
     }
 
     &__chooseCity {
@@ -46,15 +41,45 @@
 
         &--input {
             width: 100%;
+            height: 40px;
+            background-color: $color-primary-light;
+            border: none;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 5px;
         }
 
-        // &--button {
-        //     position: absolute;
-        //     top: 0;
-        //     right: 0;
-
-
-        // }
+        &--button {
+            position: absolute;
+            top: 25%;
+            right: 25%;
+            background-color: transparent;
+            border: none;
+        }
     }
 
+    &__findCity {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+
+        &--label {
+            color: $color-font-dark;
+        }
+
+        &--button {
+            background-color: $color-primary-dark;
+            height: 40px;
+            width: 100%;
+            border: none;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 5px;
+            color: $color-white;
+        }
+
+        &--button::after {
+            content: "";
+            line-height: 16px;
+        }
+    }
 }
