Auto stash before cherrypick of "Zmiana danych pogodowych"

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 
 @import "./components/main-weather-box";
 @import "./components/right-panel";
+@import "./components/leftAside";
 
 @import "./pages/weather-page";
 @import "./pages/loadingScreen";
