--- a/src/scss/components/_right-panel.scss
+++ b/src/scss/components/_right-panel.scss
@@ -14,22 +14,44 @@
     &__forcast {
         background-color: $color-white-transparent;
         flex: 1;
-        &--list{
+
+        &--list {
             display: flex;
             justify-content: stretch;
             flex-direction: column;
             height: 100%;
             list-style-type: none;
-            &:last-child{
+
+            &:last-child {
                 border-bottom: 1px solid $color-white-transparent;
             }
         }
 
-        &--listItem{
-            flex: 1;
+        &--listItem {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
             border: 1px solid $color-white-transparent;
             border-bottom: none;
             padding: 1rem;
+        }
+
+        &--date {
+            flex-basis: 30%;
+            width: 127px;
+        }
+
+        &--icon {
+            flex-grow: 1;
+            width: 127px;
+        }
+
+        &--minMax {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            flex-grow: 1;
+            width: 142px;
         }
     }
 }
