--- a/src/scss/components/_right-panel.scss
+++ b/src/scss/components/_right-panel.scss
@@ -36,6 +36,10 @@
             padding: 1rem;
         }
 
+        &--day {
+            font-weight: 400;
+        }
+
         &--date {
             flex-basis: 30%;
             width: 127px;
