--- a/src/scss/components/_leftAside.scss
+++ b/src/scss/components/_leftAside.scss
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     width: 323px;
-    height: 900px;
+    height: 100%;
     background-color: $color-transparent-leftAside;
 
     &__image {
@@ -29,7 +29,7 @@
         justify-content: space-around;
         position: absolute;
         width: 224px;
-        height: 108px;
+        height: 128px;
         left: 50px;
         top: 479px;
     }
@@ -40,8 +40,10 @@
         left: 0;
 
         &--input {
+            display: block;
             width: 100%;
             height: 40px;
+            text-align: center;
             background-color: $color-primary-light;
             border: none;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
@@ -51,7 +53,7 @@
         &--button {
             position: absolute;
             top: 25%;
-            right: 25%;
+            right: 10%;
             background-color: transparent;
             border: none;
         }
@@ -61,13 +63,17 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-items: center;
+        justify-content: center;
 
         &--label {
             color: $color-font-dark;
+            line-height: 35px;
         }
 
         &--button {
+            position: relative;
+            top: 0;
+            left: 0;
             background-color: $color-primary-dark;
             height: 40px;
             width: 100%;
@@ -75,9 +81,16 @@
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
             border-radius: 5px;
             color: $color-white;
+
+            img {
+                position: absolute;
+                display: block;
+                top: 25%;
+                right: 10%;
+                width: 22px;
+                height: 22px;
+            }
         }
-
-
 
     }
 }
