change font weight

--- a/src/scss/components/_leftAside.scss
+++ b/src/scss/components/_leftAside.scss
@@ -67,6 +67,7 @@
 
         &--label {
             color: $color-font-dark;
+            font-weight: 400;
             line-height: 35px;
         }
 
