--- a/src/scss/components/_right-panel.scss
+++ b/src/scss/components/_right-panel.scss
@@ -4,11 +4,18 @@
     display: flex;
     flex-direction: column;
     justify-content: stretch;
+    @include respons(tablet) {
+        margin: 0;
+        max-width: 100%
+    }
 
     &__date {
         font-size: 2.8rem;
         margin-bottom: 5rem;
         text-align: center;
+        @include respons(tablet) {
+            display: none;
+        }
     }
 
     &__forcast {
@@ -23,6 +30,7 @@
             list-style-type: none;
             @include respons(tablet) {
                 flex-direction: row;
+                min-height: 25rem;
             }
 
             &:last-child {
