--- a/src/scss/components/_error-handling.scss
+++ b/src/scss/components/_error-handling.scss
@@ -9,3 +9,7 @@
     border: 1px solid rgba(255, 255, 255, 0.24);
     border-radius: 5px;
 }
+.redAlert {
+    color: rgb(255, 0, 0);
+    font-size: 1.4rem;
+}
