--- a/src/scss/components/_error-handling.scss
+++ b/src/scss/components/_error-handling.scss
@@ -2,12 +2,15 @@
     position: absolute;
     width: 20em;
     height: 2rem;
-    top: 10%;
+    top: 15%;
     text-align: center;
     color: #002947;
     background-color: #FFFFFF;
     border: 1px solid rgba(255, 255, 255, 0.24);
     border-radius: 5px;
+    @include respons(tablet) {
+        top: -30%;
+      }
 }
 .redAlert {
     color: rgb(255, 0, 0);
