--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,5 +6,6 @@ $color-transparent-black: rgba(0, 0, 0, 0.25);
 $color-font-dark: rgba(0, 0, 0, 0.78);
 $color-transparent-leftAside: rgba(255, 255, 255, 0.23);
 $color-white-transparent: rgba(212, 237, 255, 0.2);
+$color-light-blue: #6DA7D0;
 
 $main-margin: 4rem;
