--- a/src/scss/components/_leftAside.scss
+++ b/src/scss/components/_leftAside.scss
@@ -56,6 +56,7 @@
             right: 10%;
             background-color: transparent;
             border: none;
+            cursor: pointer;
         }
     }
 
@@ -82,6 +83,7 @@
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
             border-radius: 5px;
             color: $color-white;
+            cursor: pointer;
 
             img {
                 position: absolute;
