deal with too long city name

--- a/src/scss/components/_main-weather-box.scss
+++ b/src/scss/components/_main-weather-box.scss
@@ -37,6 +37,7 @@
   &__box1 {
     position: relative;
     margin-bottom: 2rem;
+    word-wrap: break-word;
     &--icon {
       position: absolute;
       right: -25%;
