improve tablet styles

--- a/src/scss/components/_right-panel.scss
+++ b/src/scss/components/_right-panel.scss
@@ -30,6 +30,9 @@
             list-style-type: none;
             @include respons(tablet) {
                 flex-direction: row;
+                min-height: 25rem;
+            }
+            @include respons(phone) {
                 min-height: 21rem;
             }
 
